--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -517,6 +517,10 @@ header{
     align-self: center;
 }
 
+.invisible1 {
+    display: none;
+}
+
 .rowalign3 {
     display: flex;
     flex-direction: row;
